kopose-k8s-learn/templates/app-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.28.0 (HEAD)
  labels:
    io.kompose.service: app-controller
  name: app-controller
spec:
  ports:
    - name: "6003"
      port: 8888
      targetPort: 6003
  type: LoadBalancer
  selector:
    io.kompose.service: app-controller
status:
  loadBalancer: {}
