kopose-k8s-learn/templates/app-model-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.28.0 (HEAD)
  labels:
    io.kompose.service: app-model
  name: app-model
spec:
  ports:
    - name: "6002"
      port: 6002
      targetPort: 6002
  selector:
    io.kompose.service: app-model
status:
  loadBalancer: {}
