kopose-k8s-learn/templates/test-app-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.28.0 (HEAD)
  labels:
    io.kompose.service: test-app-redis
  name: test-app-redis
spec:
  ports:
    - name: "6001"
      port: 6001
      targetPort: 6001
  selector:
    io.kompose.service: test-app-redis
status:
  loadBalancer: {}
