kopose-k8s-learn/templates/test-app-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-app-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/test-app-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/test-app-default: "true"
